# AutoEcoShutdown

./: .gitignore  BUILD_GUIDE.md  ICONS_GUIDE.md  LICENSE  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  build-portable.ps1  build-quick.ps1  index.html  launch.bat  main.js  package-lock.json  package.json
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
